# mcp-wrapper-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README-zh.md  README.md  liblsp_probe.rlib
.cleanup/: behavioral.rs  lsp_probe.rs  mcp-proxy-tests.json
.github/workflows/: release.yml
scripts/: test-all.sh
src/: cache.rs  main.rs  proxy.rs  router.rs  transport.rs
tests/: check_orphans.py  conformance.rs  integration.rs  schema_driven.rs
tests/fixtures/: echo_server.py  mcp-proxy-tests.json
tests/support/: compose.rs  defaults.rs  error.rs  mod.rs  validate.rs  value.rs
