[package]
name = "mcp-wrapper-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
libc = "0.2.180"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "net", "io-util", "io-std", "signal", "macros", "process", "time"] }

[profile.release]
opt-level = "z"     # 最小體積
lto = true          # Link-time optimization
codegen-units = 1   # 更好優化
panic = "abort"     # 更小體積
strip = true        # 移除 debug symbols
