[package]
name = "mcp-wrapper-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.16", features = ["client", "server", "transport-child-process", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
unicode-segmentation = "1"

[profile.release]
opt-level = "z"     # Minimize binary size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Remove debug symbols
