[package]
name = "mcp-wrapper-rs"
version = "0.3.0"
edition = "2021"

[dependencies]
process-wrap = { version = "9", features = ["tokio1"] }
libc = "0.2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "sync", "time", "io-util", "io-std", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
unicode-segmentation = "1"

[profile.release]
opt-level = "z"     # Minimize binary size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Remove debug symbols
